--- a/archive.html
+++ b/archive.html
@@ -63,7 +63,7 @@
                     </form>
                     <div class="like-container">
                         <button onclick="handleLike('item1')"class="like-button"></button>
-                        <span id="like-count">7</span> Likes
+                        <span id="like-count"></span>
                     </div> 
                     <!-- Like button and count
                     <div class="like-container">
