--- a/archive.html
+++ b/archive.html
@@ -63,7 +63,7 @@
                     </form>
                     <div class="like-container">
                         <button onclick="handleLike('item1')"class="like-button"></button>
-                        <span id="like-count"> </span>
+                        <span id="like-count">0 Likes</span>
                     </div>
                     <p class="result"></p>
                 </div>
@@ -345,20 +345,28 @@
         }
 
         async function fetchLikeCount(itemId) {
-            const response = await fetch(`/.netlify/functions/like?item_id=${itemId}`);
-            const data = await response.json();
-            document.getElementById('like-count').textContent = `${data.likes} Likes`;
+            try {
+                const response = await fetch('/.netlify/functions/like');
+                const data = await response.json();
+                document.getElementById('like-count').textContent = `${data[itemId]} Likes`;
+            } catch (error) {
+                console.error('Error fetching like count:', error);
+                document.getElementById('like-count').textContent = 'Error fetching likes';
+            }
         }
 
         async function handleLike(itemId) {
-            const response = await fetch('/.netlify/functions/like', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ item_id: itemId }),
-            });
-
-            const data = await response.json();
-            document.getElementById('like-count').textContent = `${data.likes} Likes`;
+            try {
+                const response = await fetch('/.netlify/functions/like', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ item_id: itemId }),
+                });
+                const data = await response.json();
+                document.getElementById('like-count').textContent = `${data.likes} Likes`;
+            } catch (error) {
+                console.error('Error handling like:', error);
+            }
         }
 
         // Fetch the initial like count when the page loads
