--- a/archive.html
+++ b/archive.html
@@ -344,33 +344,29 @@
             document.getElementById(imageId).style.display = 'block';
         }
 
-        async function fetchLikeCount(itemId) {
-            try {
-                const response = await fetch('/.netlify/functions/like');
-                const data = await response.json();
-                document.getElementById('like-count').textContent = `${data[itemId]} Likes`;
-            } catch (error) {
-                console.error('Error fetching like count:', error);
-                document.getElementById('like-count').textContent = 'Error fetching likes';
+        document.addEventListener('DOMContentLoaded', async () => {
+            const response = await fetch('/.netlify/functions/like');
+            const data = await response.json();
+
+            // Set the initial like count for item1
+            const likeCountElement = document.getElementById('like-count');
+            if (data.item1 !== undefined) {
+                likeCountElement.textContent = `${data.item1} Likes`;
+            } else {
+                likeCountElement.textContent = '0 Likes';
             }
-        }
+        });
 
         async function handleLike(itemId) {
-            try {
-                const response = await fetch('/.netlify/functions/like', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ item_id: itemId }),
-                });
-                const data = await response.json();
-                document.getElementById('like-count').textContent = `${data.likes} Likes`;
-            } catch (error) {
-                console.error('Error handling like:', error);
-            }
-        }
+            const response = await fetch('/.netlify/functions/like', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ item_id: itemId }),
+            });
 
-        // Fetch the initial like count when the page loads
-        fetchLikeCount('item1');
+            const data = await response.json();
+            document.getElementById('like-count').textContent = `${data.likes} Likes`;
+        }
       
         function openModal(id) {
             document.getElementById(id).style.display = "block";
