Added comment to faunadb.

--- a/archive.html
+++ b/archive.html
@@ -52,22 +52,20 @@
                     <p>Another comment goes here.</p>
                     <!-- 添加更多评论 -->
                     <div class="form-container">
-                        <form name="comments" enctype="multipart/form-data" data-netlify="true" id="comment-bed1">
+                        <form id="comment-form" onsubmit="submitComment(event, 'item1')">
                             <div class="textarea-container">
-                                <textarea id="name1" name="name1" required></textarea>
-                                <textarea id="comment1" name="comment1" required></textarea>
-                                <img id="frame" src="Image/commentFrame.png" alt="Input Box" style="display:none;" />
+                                <textarea id="name" name="name"  required></textarea>
+                                <textarea id="comment" name="comment"  required></textarea>
                             </div>
-                            <button type="submit"class="submit-button"></button>
+                            <button type="submit" class="submit-button"></button>
+                        </form>
+                        <div class="like-container">
+                            <button onclick="handleLike('item1')" class="like-button"></button>
+                            <span id="like-count-item1">Loading likes...</span>
                         </div>
-                    </form>
-                    <div class="like-container">
-                        <button onclick="handleLike('item1')" class="like-button"></button>
-                        <span id="like-count-item1">Loading likes...</span>
-                        <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-width="" data-layout="" data-action="" data-size="" data-share="true"></div>
-                    </div>
-                    <p class="result"></p>
+                        <p class="result"></p>
                 </div>
+            </div>
         </div>
     </div>
 
@@ -390,48 +388,34 @@
             loadLikes('item1');
         });
 
-        // async function loadLikes(itemId) {
-        //     try {
-        //         const response = await fetch('/.netlify/functions/getlikes');
-        //         const data = await response.json();
-        //         const likeCount = data[itemId];
-
-        //         // 检查 likeCount 是否存在并有效
-        //         if (likeCount !== undefined) {
-        //             document.getElementById(`like-count-${itemId}`).textContent = `${likeCount} Likes`;
-        //         } else {
-        //             document.getElementById(`like-count-${itemId}`).textContent = '0 Likes';
-        //         }
-        //     } catch (error) {
-        //         console.error('Error fetching likes:', error);
-        //         document.getElementById(`like-count-${itemId}`).textContent = 'Error loading likes';
-        //     }
-        // }
-        
         // document.addEventListener('DOMContentLoaded', () => {
         //     // const items = ['item1', 'item2', 'item3','item4', 'item5', 'item6','item7', 'item8', 'item9','item10', 'item11', 'item12']; 
         //     const items = ['item1', 'item2'];
         //     items.forEach(itemId => {
-        //         loadLikes(itemId);
-        //     });
-        // });
+        async function submitComment(event, itemId) {
+            event.preventDefault();
+            const name = document.getElementById('name').value;
+            const comment = document.getElementById('comment').value;
 
-        // Function to handle the like button click
-        // async function handleLike(itemId) {
-        //     try {
-        //     const response = await fetch('/.netlify/functions/like', {
-        //         method: 'POST',
-        //         headers: { 'Content-Type': 'application/json' },
-        //         body: JSON.stringify({ item_id: itemId }),
-        //     });
+            try {
+                const response = await fetch('/.netlify/functions/postComment', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ item_id: itemId, name: name, comment: comment }),
+                });
 
-        //     const data = await response.json();
-        //     document.getElementById(`like-count-${itemId}`).textContent = `${data.likes} Likes`;
-        //     } catch (error) {
-        //     console.error('Error updating like:', error);
-        //     document.getElementById(`like-count-${itemId}`).textContent = 'Error updating like';
-        //     }
-        // }
+                const data = await response.json();
+                console.log('Response data:', data);
+
+                if (data.success) {
+                    // 清空表单并显示成功消息
+                    document.getElementById('comment-form').reset();
+                    alert('Comment submitted successfully!');
+                }
+            } catch (error) {
+                console.error('Error submitting comment:', error);
+            }
+        }
 
         
         function openModal(id) {
